--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -13,7 +13,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autorestart=true
 startretries=3
-user=www-data
+user=root  # Changed to root to fix permission denied on logs
 priority=100
 
 [program:nginx]
