--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -18,7 +18,7 @@ priority=100
 
 [program:nginx]
 command=nginx -g "daemon off;"
-environment=PORT="%(ENV_PORT)s"  ; Pass Railway's $PORT
+environment=PORT="80"  ; Hardcode for wizard
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
@@ -26,7 +26,7 @@ stderr_logfile_maxbytes=0
 autorestart=true
 startretries=3
 user=root
-priority=200
+priority=1  # Start first for wizard
 
 [program:nextcloud-cron]
 command=/bin/bash -c 'while true; do su www-data -s /bin/bash -c "php /var/www/html/cron.php"; sleep 300; done'
