--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -17,8 +17,7 @@ user=root  # Changed to root to fix permission denied on logs
 priority=100
 
 [program:nginx]
-command=nginx -g "daemon off;"
-environment=PORT="80"  ; Hardcode for wizard
+command=nginx -g "daemon off;" -t  # Test config on start
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
@@ -26,7 +25,7 @@ stderr_logfile_maxbytes=0
 autorestart=true
 startretries=3
 user=root
-priority=1  # Start first for wizard
+priority=1
 
 [program:nextcloud-cron]
 command=/bin/bash -c 'while true; do su www-data -s /bin/bash -c "php /var/www/html/cron.php"; sleep 300; done'
