Remove -t flag from nginx command to prevent test mode exit, increase retries

--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -17,13 +17,13 @@ user=root  # Changed to root to fix permission denied on logs
 priority=100
 
 [program:nginx]
-command=nginx -g "daemon off;" -t  # Test config on start
+command=nginx -g "daemon off;"  # Remove -t (test mode causes exit)
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autorestart=true
-startretries=3
+startretries=5  # Increase retries
 user=root
 priority=1
 
