Hardcode nginx listen to port 80 for Railway

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -9,7 +9,7 @@ map $arg_v $asset_immutable {
 }
 
 server {
-    listen $PORT default_server;  # Railway sets $PORT=80
+    listen 80 default_server;  # Hardcode for Railway (envsubst if $PORT)
     server_name _;  # Catch-all, as Railway handles domain
 
     server_tokens off;  # Hide Nginx version
