Add permission fixes and change nginx user to www-data for proper file access

--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -23,8 +23,8 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autorestart=true
-startretries=5  # Increase retries
-user=root
+startretries=5
+user=www-data
 priority=1
 
 [program:nextcloud-cron]
