--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -17,7 +17,7 @@ user=root  # Changed to root to fix permission denied on logs
 priority=100
 
 [program:nginx]
-command=nginx -g "daemon off;"  # Remove -t (test mode causes exit)
+command=nginx -g "daemon off; pid /tmp/nginx.pid;"  # Use writable pid file
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
