Create nginx pid/log dirs and comment out user directive to fix permission issues

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -12,6 +12,7 @@ server {
     listen 80 default_server;  # Hardcode for Railway (envsubst if $PORT)
     server_name _;  # Catch-all, as Railway handles domain
 
+    # user www-data;  # Comment out for root compatibility
     server_tokens off;  # Hide Nginx version
 
     root /var/www/html;  # Nextcloud webroot
