Remove duplicate pid directive from nginx.conf to fix startup error

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,3 +1,5 @@
+# pid /run/nginx.pid;  # Remove duplicate (set in command line)
+
 upstream php-handler {
     server 127.0.0.1:9000;  # PHP-FPM listener
 }
