--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -6,6 +6,8 @@ events {
   worker_connections 1024;
 }
 
+http {
+
 # No user directive (root ok)
 
 upstream php-handler {
@@ -13,7 +15,7 @@ upstream php-handler {
 }
 
 server {
-  listen 80 default_server;
+  listen ${PORT:-80} default_server;
   server_name _;
 
   server_tokens off;
@@ -113,4 +115,5 @@ server {
   location / {
     try_files $uri $uri/ /index.php$request_uri;
   }
+}
 }
