--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -15,7 +15,7 @@ upstream php-handler {
 }
 
 server {
-  listen ${PORT:-80} default_server;
+  listen ${PORT} default_server;
   server_name _;
 
   server_tokens off;
