--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -49,10 +49,26 @@ server {
 
   index index.php index.html /index.php$request_uri;
 
+  # [DEPLOYMENT] Serve deployment status page during installation
   location = / {
-    if ( $http_user_agent ~ ^DavClnt ) {
-      return 302 /remote.php/webdav/$is_args$args;
+    if (-f /var/www/html/.deployment_complete) {
+      # Deployment complete, serve Nextcloud
+      if ( $http_user_agent ~ ^DavClnt ) {
+        return 302 /remote.php/webdav/$is_args$args;
+      }
     }
+    if (!-f /var/www/html/.deployment_complete) {
+      # Still deploying, show status page
+      return 302 /deployment-status.html;
+    }
+  }
+
+  # Serve deployment status page
+  location = /deployment-status.html {
+    try_files /deployment-status.html =404;
+    add_header Cache-Control "no-cache, no-store, must-revalidate";
+    add_header Pragma "no-cache";
+    add_header Expires "0";
   }
 
   location = /robots.txt {
