--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -51,16 +51,16 @@ server {
 
   # [DEPLOYMENT] Serve deployment status page during installation
   location = / {
-    if (-f /var/www/html/.deployment_complete) {
-      # Deployment complete, serve Nextcloud
-      if ( $http_user_agent ~ ^DavClnt ) {
-        return 302 /remote.php/webdav/$is_args$args;
-      }
-    }
+    # Still deploying? Show status page
     if (!-f /var/www/html/.deployment_complete) {
-      # Still deploying, show status page
       return 302 /deployment-status.html;
     }
+    # Deployment complete: Handle DAV clients specially
+    if ($http_user_agent ~ ^DavClnt) {
+      return 302 /remote.php/webdav/$is_args$args;
+    }
+    # Normal Nextcloud root
+    try_files /index.php$request_uri =404;
   }
 
   # Serve deployment status page
