--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -6,16 +6,24 @@ events {
 }
 
 http {
+  # Set default port if not provided
+  map $http_host $port {
+    default $server_port;
+    ~^(?<host>[^:]+):(?<port_num>[0-9]+)$ $port_num;
+  }
+  
+  # Use PORT environment variable or default to 8080
+  set $listen_port ${PORT:-8080};
 
-# No user directive (root ok)
+  # No user directive (root ok)
 
-upstream php-handler {
-  server 127.0.0.1:9000;
-}
+  upstream php-handler {
+    server 127.0.0.1:9000;
+  }
 
-server {
-  listen ${PORT} default_server;
-  server_name _;
+  server {
+    listen ${PORT:-8080} default_server;
+    server_name _;
 
   server_tokens off;
 
