--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -61,7 +61,7 @@ http {
   location = / {
     # Still deploying? Show status page
     if (!-f /var/www/html/.deployment_complete) {
-      return 302 /deployment-status.html;
+      rewrite ^ /deployment-status.html break;
     }
     # Deployment complete: Handle DAV clients specially
     if ($http_user_agent ~ ^DavClnt) {
@@ -71,9 +71,17 @@ http {
     try_files /index.php$request_uri =404;
   }
 
-  # Serve deployment status page
+  # Serve deployment status page directly
   location = /deployment-status.html {
-    try_files /deployment-status.html =404;
+    alias /var/www/html/deployment-status.html;
+    add_header Cache-Control "no-cache, no-store, must-revalidate";
+    add_header Pragma "no-cache";
+    add_header Expires "0";
+    add_header Content-Type "text/html";
+  }
+
+  # Serve static files
+  location ~* \.(html)$ {
     add_header Cache-Control "no-cache, no-store, must-revalidate";
     add_header Pragma "no-cache";
     add_header Expires "0";
