--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -13,7 +13,7 @@ http {
   }
 
   server {
-    listen ${PORT:-8080} default_server;
+    listen ${PORT} default_server;
     server_name _;
 
   server_tokens off;
