--- a/config/php.ini
+++ b/config/php.ini
@@ -1,24 +1,40 @@
-# PHP Configuration for NextCloud optimization
+# PHP Configuration optimized for NextCloud 29.x
+# Based on Nextcloud official recommendations
 
+# Memory and Performance
 memory_limit = 512M
 upload_max_filesize = 2G
 post_max_size = 2G
 max_execution_time = 3600
+max_input_time = 3600
+
+# OPcache (Critical for Nextcloud performance)
 opcache.enable = 1
-opcache.memory_consumption = 128
-opcache.interned_strings_buffer = 8
+opcache.enable_cli = 1
+opcache.memory_consumption = 256
+opcache.interned_strings_buffer = 16
 opcache.max_accelerated_files = 10000
-opcache.revalidate_freq = 1
+opcache.revalidate_freq = 60
+opcache.save_comments = 1
+opcache.fast_shutdown = 1
+opcache.validate_timestamps = 1
+opcache.blacklist_filename = "/usr/local/etc/php/opcache-blacklist"
 
 # Security settings
 expose_php = Off
-allow_url_fopen = Off
+allow_url_fopen = On
 allow_url_include = Off
 display_errors = Off
 display_startup_errors = Off
 log_errors = On
+error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT
+cgi.fix_pathinfo = 0
 
-# Date settings
+# File uploads
+file_uploads = On
+max_file_uploads = 20
+
+# Date and Time
 date.timezone = UTC
 
 # Realpath cache for performance
@@ -26,4 +42,24 @@ realpath_cache_size = 4096K
 realpath_cache_ttl = 600
 
 # Session settings
-session.gc_maxlifetime = 1440
+session.gc_maxlifetime = 21600
+session.gc_divisor = 500
+session.gc_probability = 1
+session.cookie_secure = 1
+session.cookie_httponly = 1
+session.cookie_samesite = "Strict"
+session.save_handler = redis
+session.save_path = "tcp://redis:6379"
+
+# APCu (Alternative PHP Cache)
+apc.enable = 1
+apc.enable_cli = 1
+apc.shm_size = 256M
+apc.ttl = 7200
+apc.gc_ttl = 3600
+apc.entries_hint = 4096
+apc.slam_defense = 1
+
+# MySQL/MariaDB optimizations
+mysqlnd.collect_statistics = Off
+mysqlnd.collect_memory_statistics = Off
