--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -2,6 +2,8 @@
 nodaemon=true
 user=root
 logfile=/var/log/supervisor/supervisord.log
+logfile_maxbytes=50MB
+logfile_backups=3
 pidfile=/var/run/supervisord.pid
 childlogdir=/var/log/supervisor
 
@@ -13,8 +15,11 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autorestart=true
 startretries=3
-user=root  # Changed to root to fix permission denied on logs
+startsecs=5
+stopwaitsecs=30
+user=root
 priority=100
+environment=PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 
 [program:nginx]
 command=nginx -g "daemon off;"
@@ -24,16 +29,24 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autorestart=true
 startretries=5
-user=www-data
-priority=1
+startsecs=5
+stopwaitsecs=10
+user=root
+priority=50
+depends_on=php-fpm
+environment=PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 
 [program:nextcloud-cron]
-command=/bin/bash -c 'while true; do su www-data -s /bin/bash -c "php /var/www/html/cron.php"; sleep 300; done'
+command=/bin/bash -c 'while true; do su www-data -s /bin/bash -c "cd /var/www/html && php cron.php"; sleep 300; done'
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autorestart=true
-startretries=999
-user=root
+startretries=3
 startsecs=10
+stopwaitsecs=10
+user=root
+priority=25
+depends_on=php-fpm,nginx
+environment=PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
