--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -8,36 +8,76 @@ events {
 http {
   # No user directive (root ok)
 
+  # Upstream PHP-FPM handler
   upstream php-handler {
     server 127.0.0.1:9000;
   }
+
+  # Rate limiting zones
+  limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
+  limit_req_zone $binary_remote_addr zone=general:10m rate=100r/s;
+
+  # Security: Hide nginx version
+  server_tokens off;
 
   server {
     listen ${PORT} default_server;
     server_name _;
 
-  server_tokens off;
+    root /var/www/html;
 
-  root /var/www/html;
+    # Client settings
+    client_max_body_size 512M;
+    client_body_timeout 300s;
+    client_header_timeout 60s;
+    client_body_buffer_size 512k;
 
-  client_max_body_size 512M;
-  client_body_timeout 300s;
-  fastcgi_buffers 64 4K;
+    # FastCGI settings
+    fastcgi_buffers 64 4K;
+    fastcgi_read_timeout 300s;
 
-  gzip on;
-  gzip_vary on;
-  gzip_comp_level 4;
-  gzip_min_length 256;
-  gzip_proxied expired no-cache no-store private no_last_modified no_etag auth;
-  gzip_types application/atom+xml text/javascript application/javascript application/json application/ld+json application/manifest+json application/rss+xml application/vnd.geo+json application/vnd.ms-fontobject application/wasm application/x-font-ttf application/x-web-app-manifest+json application/xhtml+xml application/xml font/opentype image/bmp image/svg+xml image/x-icon text/cache-manifest text/css text/plain text/vcard text/vnd.rim.location.xloc text/vtt text/x-component text/x-cross-domain-policy;
+    # Gzip compression
+    gzip on;
+    gzip_vary on;
+    gzip_comp_level 4;
+    gzip_min_length 256;
+    gzip_proxied expired no-cache no-store private no_last_modified no_etag auth;
+    gzip_types
+      application/atom+xml
+      application/javascript
+      application/json
+      application/ld+json
+      application/manifest+json
+      application/rss+xml
+      application/vnd.geo+json
+      application/vnd.ms-fontobject
+      application/wasm
+      application/x-font-ttf
+      application/x-web-app-manifest+json
+      application/xhtml+xml
+      application/xml
+      font/opentype
+      image/bmp
+      image/svg+xml
+      image/x-icon
+      text/cache-manifest
+      text/css
+      text/javascript
+      text/plain
+      text/vcard
+      text/vnd.rim.location.xloc
+      text/vtt
+      text/x-component
+      text/x-cross-domain-policy;
 
-  client_body_buffer_size 512k;
-
-  add_header Referrer-Policy "no-referrer" always;
-  add_header X-Content-Type-Options "nosniff" always;
-  add_header X-Frame-Options "SAMEORIGIN" always;
-  add_header X-Permitted-Cross-Domain-Policies "none" always;
-  add_header X-Robots-Tag "noindex, nofollow" always;
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "no-referrer" always;
+    add_header X-Permitted-Cross-Domain-Policies "none" always;
+    add_header X-Robots-Tag "noindex, nofollow" always;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
   fastcgi_hide_header X-Powered-By;
 
