--- a/railway.toml
+++ b/railway.toml
@@ -3,12 +3,29 @@ builder = "dockerfile"
 
 [deploy]
 startCommand = "/usr/local/bin/custom-entrypoint.sh"
+healthcheckPath = "/status.php"
+healthcheckTimeout = 300
+restartPolicyType = "ON_FAILURE"
+restartPolicyMaxRetries = 10
 
 [env]
-NEXTCLOUD_TRUSTED_DOMAINS = "nextcloud-railway-template-website.up.railway.app localhost"
+# Nextcloud Configuration
+NEXTCLOUD_ADMIN_USER = "kikaiworksadmin"
+NEXTCLOUD_TRUSTED_DOMAINS = "${{RAILWAY_PUBLIC_DOMAIN}},localhost,::1,${{RAILWAY_PRIVATE_DOMAIN}},${{RAILWAY_STATIC_URL}}"
+NEXTCLOUD_UPDATE_CHECK = "false"
+NEXTCLOUD_DATA_DIR = "/var/www/html/data"
+
+# PHP Performance Settings
 PHP_MEMORY_LIMIT = "512M"
 PHP_UPLOAD_LIMIT = "512M"
+PHP_MAX_EXECUTION_TIME = "3600"
+
+# System Settings
+PORT = "8080"
 
 [healthcheck]
-path = "/"
-timeout = 300
+path = "/status.php"
+interval = 30
+timeout = 10
+startPeriod = 60
+retries = 3
