--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -21,7 +21,7 @@ http {
   server_tokens off;
 
   server {
-    listen ${PORT} default_server;
+    listen ${PORT:-8080} default_server;
     server_name _;
 
     root /var/www/html;
