--- a/config/php.ini
+++ b/config/php.ini
@@ -49,7 +49,7 @@ session.cookie_secure = 1
 session.cookie_httponly = 1
 session.cookie_samesite = "Strict"
 session.save_handler = redis
-session.save_path = "tcp://redis-svle.railway.internal:6379"
+session.save_path = tcp://redis-svle.railway.internal:6379
 
 # APCu (Alternative PHP Cache)
 apc.enable = 1
