--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -6,6 +6,16 @@ events {
 }
 
 http {
+  include /etc/nginx/mime.types;
+  default_type application/octet-stream;
+
+  # Logging format
+  log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                  '$status $body_bytes_sent "$http_referer" '
+                  '"$http_user_agent" "$http_x_forwarded_for"';
+
+  access_log /var/log/nginx/access.log main;
+
   # No user directive (root ok)
 
   # Upstream PHP-FPM handler
@@ -21,7 +31,7 @@ http {
   server_tokens off;
 
   server {
-    listen ${PORT:-8080} default_server;
+    listen ${PORT} default_server;
     server_name _;
 
     root /var/www/html;
@@ -81,7 +91,6 @@ http {
 
   fastcgi_hide_header X-Powered-By;
 
-  include mime.types;
   types {
     text/javascript mjs;
   }
