--- a/config/php.ini
+++ b/config/php.ini
@@ -3,12 +3,12 @@
 
 # Memory and Performance
 memory_limit = 512M
-upload_max_filesize = 2G
-post_max_size = 2G
+upload_max_filesize = 2048M
+post_max_size = 2048M
 max_execution_time = 3600
 max_input_time = 3600
 
-# OPcache (Critical for Nextcloud performance)
+# OPcache - Critical for Nextcloud performance
 opcache.enable = 1
 opcache.enable_cli = 1
 opcache.memory_consumption = 256
@@ -29,6 +29,9 @@ display_startup_errors = Off
 log_errors = On
 error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT
 cgi.fix_pathinfo = 0
+
+# PHP tags
+short_open_tag = On
 
 # File uploads
 file_uploads = On
