--- a/config/php.ini
+++ b/config/php.ini
@@ -1,62 +1,20 @@
-# PHP Configuration optimized for NextCloud 29.x
-# Based on Nextcloud official recommendations
-
-# Memory and Performance
+# PHP Configuration for NextCloud
 memory_limit = 512M
 upload_max_filesize = 2048M
 post_max_size = 2048M
 max_execution_time = 3600
 max_input_time = 3600
-
-# OPcache - Critical for Nextcloud performance
 opcache.enable = 1
 opcache.enable_cli = 1
 opcache.memory_consumption = 256
 opcache.interned_strings_buffer = 16
 opcache.max_accelerated_files = 10000
 opcache.revalidate_freq = 60
-opcache.save_comments = 1
-opcache.fast_shutdown = 1
-opcache.validate_timestamps = 1
-opcache.blacklist_filename = "/usr/local/etc/php/opcache-blacklist"
-
-# Security settings
 expose_php = Off
-allow_url_fopen = On
-allow_url_include = Off
 display_errors = Off
 display_startup_errors = Off
 log_errors = On
-error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT
-cgi.fix_pathinfo = 0
-
-# PHP tags
 short_open_tag = On
-
-# File uploads
 file_uploads = On
 max_file_uploads = 20
-
-# Date and Time
 date.timezone = UTC
-
-# Realpath cache for performance
-realpath_cache_size = 4096K
-realpath_cache_ttl = 600
-
-# Session settings
-session.gc_maxlifetime = 21600
-session.gc_divisor = 500
-session.gc_probability = 1
-session.cookie_secure = 1
-session.cookie_httponly = 1
-session.cookie_samesite = "Strict"
-
-# APCu (Alternative PHP Cache)
-apc.enable = 1
-apc.enable_cli = 1
-apc.shm_size = 256M
-apc.ttl = 7200
-apc.gc_ttl = 3600
-apc.entries_hint = 4096
-apc.slam_defense = 1
