--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -120,6 +120,16 @@ http {
     add_header Content-Type "text/html";
   }
 
+  # Health check during deployment - return JSON status
+  location = /status.php {
+    if (!-f /var/www/html/.deployment_complete) {
+      add_header Content-Type application/json;
+      return 200 '{"status":"deploying","message":"Nextcloud deployment in progress"}';
+    }
+    # Deployment complete: serve actual status.php
+    try_files /status.php$request_uri =404;
+  }
+
   # Serve static files
   location ~* \.(html)$ {
     add_header Cache-Control "no-cache, no-store, must-revalidate";
