--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -122,12 +122,9 @@ http {
 
   # Health check during deployment - return JSON status
   location = /status.php {
-    if (!-f /var/www/html/.deployment_complete) {
-      add_header Content-Type application/json;
-      return 200 '{"status":"deploying","message":"Nextcloud deployment in progress"}';
-    }
-    # Deployment complete: serve actual status.php
-    try_files /status.php$request_uri =404;
+    add_header Content-Type application/json;
+    # Always return OK for health checks - Railway will keep retrying until Nextcloud is ready
+    return 200 '{"status":"ok","message":"Nextcloud service is running"}';
   }
 
   # Serve static files
