--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -34,7 +34,7 @@ stopwaitsecs=10
 user=root
 priority=50
 depends_on=php-fpm
-environment=PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+environment=PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin",PORT="8080"
 
 [program:nextcloud-cron]
 command=/bin/bash -c 'while true; do su www-data -s /bin/bash -c "cd /var/www/html && php cron.php"; sleep 300; done'
