Remove deployment status page functionality - Nextcloud is now operational

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -101,24 +101,10 @@ http {
   location = / {
     # Still deploying? Show status page
     if (!-f /var/www/html/.deployment_complete) {
-      rewrite ^ /deployment-status.html break;
+      rewrite ^ / break;
     }
-    # Deployment complete: Handle DAV clients specially
-    if ($http_user_agent ~ ^DavClnt) {
-      return 302 /remote.php/webdav/$is_args$args;
-    }
-    # Normal Nextcloud root
-    try_files /index.php$request_uri =404;
-  }
 
-  # Serve deployment status page directly
-  location = /deployment-status.html {
-    alias /var/www/html/deployment-status.html;
-    add_header Cache-Control "no-cache, no-store, must-revalidate";
-    add_header Pragma "no-cache";
-    add_header Expires "0";
-    add_header Content-Type "text/html";
-  }
+
 
   # Health check during deployment - return JSON status
   location = /status.php {
