--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -64,7 +64,6 @@ http {
       application/wasm
       application/x-font-ttf
       application/x-web-app-manifest+json
-      application/xhtml+xml
       application/xml
       font/opentype
       image/bmp
@@ -95,7 +94,7 @@ http {
     text/javascript mjs;
   }
 
-  index index.php index.html /index.php$request_uri;
+  index index.php /index.php$request_uri;
 
   # Health check during deployment - return JSON status
   location = /status.php {
@@ -112,12 +111,7 @@ http {
     }
   }
 
-  # Serve static files
-  location ~* \.(html)$ {
-    add_header Cache-Control "no-cache, no-store, must-revalidate";
-    add_header Pragma "no-cache";
-    add_header Expires "0";
-  }
+
 
   location = /robots.txt {
     allow all;
