--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -99,8 +99,11 @@ http {
   # Health check during deployment - return JSON status
   location = /status.php {
     add_header Content-Type application/json;
+    add_header Access-Control-Allow-Origin *;
+    add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
+    add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range";
     # Always return OK for health checks - Railway will keep retrying until Nextcloud is ready
-    return 200 '{"status":"ok","message":"Nextcloud service is running"}';
+    return 200 '{"status":"ok","message":"Nextcloud service is running","service":"nginx"}';
   }
 
   # [DEPLOYMENT] Serve deployment status page during installation
