--- a/railway.toml
+++ b/railway.toml
@@ -13,7 +13,7 @@ restartPolicyMaxRetries = 10
 NEXTCLOUD_ADMIN_USER = "kikaiworksadmin"
 NEXTCLOUD_ADMIN_PASSWORD = "2046S@nto!7669Y@"
 NEXTCLOUD_TRUSTED_DOMAINS = "${{RAILWAY_PUBLIC_DOMAIN}},localhost,::1,${{RAILWAY_PRIVATE_DOMAIN}},${{RAILWAY_STATIC_URL}}"
-NEXTCLOUD_UPDATE_CHECKER = "false"
+NEXTCLOUD_UPDATE_CHECK = "false"
 NEXTCLOUD_DATA_DIR = "/var/www/html/data"
 
 # PHP Performance Settings
