--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -96,14 +96,20 @@ http {
 
   index index.php /index.php$request_uri;
 
-  # Health check during deployment - return JSON status
+  # Health check during deployment - return JSON status only when deployment is complete
   location = /status.php {
     add_header Content-Type application/json;
     add_header Access-Control-Allow-Origin *;
     add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
     add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range";
-    # Always return OK for health checks - Railway will keep retrying until Nextcloud is ready
-    return 200 '{"status":"ok","message":"Nextcloud service is running","service":"nginx"}';
+
+    # Only return healthy status when Nextcloud deployment is complete
+    if (-f /var/www/html/.deployment_complete) {
+      return 200 '{"status":"ok","message":"Nextcloud is fully deployed and ready","service":"nextcloud"}';
+    }
+
+    # During deployment, return service unavailable
+    return 503 '{"status":"deploying","message":"Nextcloud deployment in progress","service":"nextcloud"}';
   }
 
   # [DEPLOYMENT] Serve deployment status page during installation
