Fix Nextcloud deployment restart loop and enable pretty URLs - Improve version check to prevent major version upgrade failures - Skip auto-upgrade on major version mismatch to avoid data loss - Force maintenance mode off and create deployment flag always if DB exists - Add htaccess.RewriteBase to config template for pretty URLs - Update nginx.conf for Nextcloud docs compliant pretty URL rewrites - Enable pretty URLs in entrypoint.sh

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -112,12 +112,12 @@ http {
     return 503 '{"status":"deploying","message":"Nextcloud deployment in progress","service":"nextcloud"}';
   }
 
-  # [DEPLOYMENT] Serve deployment status page during installation
-  location = / {
-    # Still deploying? Show status page
+  location / {
+    # Serve deployment status if not complete
     if (!-f /var/www/html/.deployment_complete) {
-      rewrite ^ / break;
+      rewrite ^ / break;  # Falls to deploy status
     }
+    try_files $uri $uri/ /index.php$is_args$args;
   }
 
 
@@ -156,14 +156,9 @@ http {
     fastcgi_max_temp_file_size 0;
   }
 
-  location ~ \.(?:css|js|mjs|svg|gif|ico|jpg|png|webp|wasm|tflite|map|ogg|flac)$ {
-    try_files $uri /index.php$request_uri;
-    add_header Cache-Control "public, max-age=15778463";
-    add_header Referrer-Policy "no-referrer" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Permitted-Cross-Domain-Policies "none" always;
-    add_header X-Robots-Tag "noindex, nofollow" always;
+  location ~ \.(?:css|js|mjs|svg|gif|ico|png|jpg|jpeg|webp|ico|wasm|map)$ {
+    try_files $uri /index.php$is_args$args;
+    expires 1y;
     access_log off;
   }
 
