Fix deploy: PHP-FPM www-data + perms 750/640 + single upgrade + read-only config

--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -17,7 +17,7 @@ autorestart=true
 startretries=3
 startsecs=5
 stopwaitsecs=30
-user=root
+user=www-data  ; 🔧 FIXED: www-data (Nextcloud official)
 priority=100
 environment=PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 
