--- a/railway.toml
+++ b/railway.toml
@@ -6,20 +6,20 @@ startCommand = "/usr/local/bin/custom-entrypoint.sh"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
-[[services]]
-[services.vars]
+[environments.production.variables]
+POSTGRES_HOST = "${{Postgres.RAILWAY_PRIVATE_DOMAIN}}"
+POSTGRES_USER = "${{Postgres.PGUSER}}"
+POSTGRES_PASSWORD = "${{Postgres.POSTGRES_PASSWORD}}"
+POSTGRES_DB = "${{Postgres.POSTGRES_DB}}"
+POSTGRES_PORT = "5432"
+REDIS_HOST = "${{Redis.RAILWAY_PRIVATE_DOMAIN}}"
+REDIS_PORT = "${{Redis.REDISPORT}}"
+REDIS_PASSWORD = "${{Redis.REDIS_PASSWORD}}"
 PORT = "8080"
 NEXTCLOUD_ADMIN_USER = "kikaiworksadmin"
 NEXTCLOUD_ADMIN_PASSWORD = "2046S@nto!7669Y@"
-NEXTCLOUD_TRUSTED_DOMAINS = "nextcloud-railway-template-website.up.railway.app,localhost,::1,$RAILWAY_PRIVATE_DOMAIN,$RAILWAY_STATIC_URL"
+NEXTCLOUD_TRUSTED_DOMAINS = "${{RAILWAY_PUBLIC_DOMAIN}} localhost"
 NEXTCLOUD_UPDATE_CHECK = "false"
 OVERWRITEPROTOCOL = "https"
 PHP_MEMORY_LIMIT = "512M"
 PHP_UPLOAD_LIMIT = "512M"
-
-
-# Auto-links plugins (Railway UI confirms)
-[services.databases.postgres]
-plugin = "railway.postgres"
-[services.databases.redis]
-plugin = "railway.redis"
