--- a/railway.toml
+++ b/railway.toml
@@ -7,19 +7,26 @@ restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
 [environments.production.variables]
-POSTGRES_HOST = "${{Postgres.RAILWAY_PRIVATE_DOMAIN}}"
-POSTGRES_USER = "${{Postgres.PGUSER}}"
-POSTGRES_PASSWORD = "${{Postgres.POSTGRES_PASSWORD}}"
-POSTGRES_DB = "${{Postgres.POSTGRES_DB}}"
-POSTGRES_PORT = "5432"
-REDIS_HOST = "${{Redis.RAILWAY_PRIVATE_DOMAIN}}"
-REDIS_PORT = "${{Redis.REDISPORT}}"
-REDIS_PASSWORD = "${{Redis.REDIS_PASSWORD}}"
+NEXTCLOUD_ADMIN_USER="kikaiworksadmin"
+NEXTCLOUD_ADMIN_PASSWORD="2046S@nto!7669Y@"
+NEXTCLOUD_TRUSTED_DOMAINS="nextcloud-railway-template-website.up.railway.app,localhost,::1,RAILWAY_PRIVATE_DOMAIN,RAILWAY_STATIC_URL"
+NEXTCLOUD_UPDATE_CHECK="false"
+OVERWRITEPROTOCOL="https"
+DATABASE_URL="${{Postgres-P4g0.DATABASE_URL}}"
+PGDATA="${{Postgres-P4g0.PGDATA}}"
+PGDATABASE="${{Postgres-P4g0.PGDATABASE}}"
+PGHOST="${{Postgres-P4g0.PGHOST}}"
+PGPASSWORD="${{Postgres-P4g0.PGPASSWORD}}"
+PGPORT="${{Postgres-P4g0.PGPORT}}"
+PGUSER="${{Postgres-P4g0.PGUSER}}"
+POSTGRES_DB="${{Postgres-P4g0.POSTGRES_DB}}"
+POSTGRES_PASSWORD="${{Postgres-P4g0.POSTGRES_PASSWORD}}"
+REDIS_PASSWORD="${{Redis.REDIS_PASSWORD}}"
+REDIS_URL="${{Redis.REDIS_URL}}"
+REDISHOST="${{Redis.REDISHOST}}"
+REDISPASSWORD="${{Redis.REDISPASSWORD}}"
+REDISPORT="${{Redis.REDISPORT}}"
+REDISUSER="${{Redis.REDISUSER}}"
 PORT = "8080"
-NEXTCLOUD_ADMIN_USER = "kikaiworksadmin"
-NEXTCLOUD_ADMIN_PASSWORD = "2046S@nto!7669Y@"
-NEXTCLOUD_TRUSTED_DOMAINS = "${{RAILWAY_PUBLIC_DOMAIN}} localhost"
-NEXTCLOUD_UPDATE_CHECK = "false"
-OVERWRITEPROTOCOL = "https"
 PHP_MEMORY_LIMIT = "512M"
 PHP_UPLOAD_LIMIT = "512M"
