--- a/railway.toml
+++ b/railway.toml
@@ -22,12 +22,12 @@ PGUSER="postgres"
 POSTGRES_DB="railway"
 POSTGRES_PASSWORD="xVyHVBpGWZcXdelGFmefiMnrNdnTFvZs"
 POSTGRES_USER="postgres"
-REDIS_PASSWORD="${{Redis.REDIS_PASSWORD}}"
-REDIS_URL="${{Redis.REDIS_URL}}"
-REDISHOST="${{Redis.REDISHOST}}"
-REDISPASSWORD="${{Redis.REDISPASSWORD}}"
-REDISPORT="${{Redis.REDISPORT}}"
-REDISUSER="${{Redis.REDISUSER}}"
+REDIS_PASSWORD="bBUKIGtXsDgEvCzIbHYzJUVeHqchyKDG"
+REDIS_URL="redis://default:bBUKIGtXsDgEvCzIbHYzJUVeHqchyKDG@${{RAILWAY_PRIVATE_DOMAIN}}:6379"
+REDISHOST="${{RAILWAY_PRIVATE_DOMAIN}}"
+REDISPASSWORD="bBUKIGtXsDgEvCzIbHYzJUVeHqchyKDG"
+REDISPORT="6379"
+REDISUSER="default"
 PORT = "8080"
 PHP_MEMORY_LIMIT = "512M"
 PHP_UPLOAD_LIMIT = "512M"
