--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -8,7 +8,7 @@ pidfile=/var/run/supervisord.pid
 childlogdir=/var/log/supervisor
 
 [program:php-fpm]
-command=php-fpm -F
+command=/usr/sbin/php-fpm -F
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
