--- a/railway.toml
+++ b/railway.toml
@@ -9,22 +9,21 @@ NEXTCLOUD_ADMIN_PASSWORD="2046S@nto!7669Y@"
 NEXTCLOUD_TRUSTED_DOMAINS="nextcloud-railway-template-website.up.railway.app,localhost,::1,RAILWAY_PRIVATE_DOMAIN,RAILWAY_STATIC_URL"
 NEXTCLOUD_UPDATE_CHECK="false"
 OVERWRITEPROTOCOL="https"
-DATABASE_URL="postgresql://postgres:xVyHVBpGWZcXdelGFmefiMnrNdnTFvZs@${{RAILWAY_PRIVATE_DOMAIN}}:5432/railway"
-PGDATA="/var/lib/postgresql/data/pgdata"
-PGDATABASE="railway"
-PGHOST="${{RAILWAY_PRIVATE_DOMAIN}}"
-PGPASSWORD="xVyHVBpGWZcXdelGFmefiMnrNdnTFvZs"
-PGPORT="5432"
-PGUSER="postgres"
-POSTGRES_DB="railway"
-POSTGRES_PASSWORD="xVyHVBpGWZcXdelGFmefiMnrNdnTFvZs"
-POSTGRES_USER="postgres"
-REDIS_PASSWORD="ixPeasWMoZHDuSmPgTmVmQQphKZlLkFs"
-REDIS_URL="redis://default:ixPeasWMoZHDuSmPgTmVmQQphKZlLkFs@${{RAILWAY_PRIVATE_DOMAIN}}:6379"
-REDISHOST="${{RAILWAY_PRIVATE_DOMAIN}}"
-REDISPASSWORD="ixPeasWMoZHDuSmPgTmVmQQphKZlLkFs"
-REDISPORT="6379"
-REDISUSER="default"
+DATABASE_URL="${{Postgres-P4g0.DATABASE_URL}}"
+PGDATA="${{Postgres-P4g0.PGDATA}}"
+PGDATABASE="${{Postgres-P4g0.PGDATABASE}}"
+PGHOST="${{Postgres-P4g0.PGHOST}}"
+PGPASSWORD="${{Postgres-P4g0.PGPASSWORD}}"
+PGPORT="${{Postgres-P4g0.PGPORT}}"
+PGUSER="${{Postgres-P4g0.PGUSER}}"
+POSTGRES_DB="${{Postgres-P4g0.POSTGRES_DB}}"
+POSTGRES_PASSWORD="${{Postgres-P4g0.POSTGRES_PASSWORD}}"
+REDIS_PASSWORD="${{Redis.REDIS_PASSWORD}}"
+REDIS_URL="${{Redis.REDIS_URL}}"
+REDISHOST="${{Redis.REDISHOST}}"
+REDISPASSWORD="${{Redis.REDISPASSWORD}}"
+REDISPORT="${{Redis.REDISPORT}}"
+REDISUSER="${{Redis.REDISUSER}}"
 PORT = "8080"
 PHP_MEMORY_LIMIT = "512M"
 PHP_UPLOAD_LIMIT = "512M"
