Fix Redis wait with --user flag and update php-fpm path

--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -8,7 +8,7 @@ pidfile=/var/run/supervisord.pid
 childlogdir=/var/log/supervisor
 
 [program:php-fpm]
-command=/usr/sbin/php-fpm -F
+command=/usr/local/bin/php-fpm -F
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
@@ -19,6 +19,7 @@ startsecs=5
 stopwaitsecs=30
 user=www-data  ; 🔧 FIXED: www-data (Nextcloud official)
 priority=100
+numprocs=1
 environment=PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 
 [program:nginx]
