--- a/railway.toml
+++ b/railway.toml
@@ -6,7 +6,7 @@ restartPolicyMaxRetries = 10
 [environments.production.variables]
 NEXTCLOUD_ADMIN_USER="kikaiworksadmin"
 NEXTCLOUD_ADMIN_PASSWORD="2046S@nto!7669Y@"
-NEXTCLOUD_TRUSTED_DOMAINS="nextcloud-railway-template-website.up.railway.app,localhost,::1,RAILWAY_PRIVATE_DOMAIN,RAILWAY_STATIC_URL"
+NEXTCLOUD_TRUSTED_DOMAINS="${{RAILWAY_PUBLIC_DOMAIN}},localhost"
 NEXTCLOUD_UPDATE_CHECK="false"
 OVERWRITEPROTOCOL="https"
 DATABASE_URL="${{Postgres-P4g0.DATABASE_URL}}"
