--- a/railway.toml
+++ b/railway.toml
@@ -9,21 +9,15 @@ NEXTCLOUD_ADMIN_PASSWORD="2046S@nto!7669Y@"
 NEXTCLOUD_TRUSTED_DOMAINS="${{RAILWAY_PUBLIC_DOMAIN}},localhost"
 NEXTCLOUD_UPDATE_CHECK="false"
 OVERWRITEPROTOCOL="https"
-DATABASE_URL="${{Postgres-P4g0.DATABASE_URL}}"
-PGDATA="${{Postgres-P4g0.PGDATA}}"
-PGDATABASE="${{Postgres-P4g0.PGDATABASE}}"
-PGHOST="${{Postgres-P4g0.PGHOST}}"
-PGPASSWORD="${{Postgres-P4g0.PGPASSWORD}}"
-PGPORT="${{Postgres-P4g0.PGPORT}}"
-PGUSER="${{Postgres-P4g0.PGUSER}}"
-POSTGRES_DB="${{Postgres-P4g0.POSTGRES_DB}}"
-POSTGRES_PASSWORD="${{Postgres-P4g0.POSTGRES_PASSWORD}}"
-REDIS_PASSWORD="${{Redis.REDIS_PASSWORD}}"
-REDIS_URL="${{Redis.REDIS_URL}}"
-REDISHOST="${{Redis.REDISHOST}}"
-REDISPASSWORD="${{Redis.REDISPASSWORD}}"
-REDISPORT="${{Redis.REDISPORT}}"
-REDISUSER="${{Redis.REDISUSER}}"
+PGHOST="postgres-p4g0.railway.internal"
+PGPORT="5432"
+PGUSER="postgres"
+PGPASSWORD="xVyHVBpGWZcXdelGFmefiMnrNdnTFvZs"
+POSTGRES_DB="railway"
+REDISHOST="redis.railway.internal"
+REDISPORT="6379"
+REDIS_PASSWORD="ixPeasWMoZHDuSmPgTmVmQQphKZlLkFs"
+REDISUSER="default"
 PORT = "8080"
 PHP_MEMORY_LIMIT = "512M"
 PHP_UPLOAD_LIMIT = "512M"
