restart from template
i added the fix to mpm error apache

--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -2,52 +2,32 @@
 nodaemon=true
 user=root
 logfile=/var/log/supervisor/supervisord.log
-logfile_maxbytes=50MB
-logfile_backups=3
 pidfile=/var/run/supervisord.pid
 childlogdir=/var/log/supervisor
 
-[program:php-fpm]
-command=/usr/bin/php-fpm -F
+[program:apache2]
+command=/bin/bash -c "sleep 2 && /usr/local/bin/apache2-foreground"
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autorestart=true
 startretries=3
-startsecs=5
-stopwaitsecs=30
-user=www-data  ; 🔧 FIXED: www-data (Nextcloud official)
-priority=100
-numprocs=1
-environment=PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
-
-[program:nginx]
-command=nginx -g "daemon off;"
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
-autorestart=true
-startretries=5
-startsecs=5
-stopwaitsecs=10
 user=root
-priority=50
-depends_on=php-fpm
-environment=PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin",PORT="8080"
+priority=200
+
+[program:cron]
+command=/usr/sbin/cron -f
+stdout_logfile=/var/log/cron.log
+stderr_logfile=/var/log/cron.log
+autorestart=true
+user=root
 
 [program:nextcloud-cron]
-command=/bin/bash -c 'while true; do su www-data -s /bin/bash -c "cd /var/www/html && php cron.php"; sleep 300; done'
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
+command=/bin/bash -c 'sleep 60 && while true; do su www-data -s /bin/bash -c "php /var/www/html/cron.php"; sleep 300; done'
+stdout_logfile=/var/log/nextcloud-cron.log
+stderr_logfile=/var/log/nextcloud-cron.log
 autorestart=true
-startretries=3
-startsecs=10
-stopwaitsecs=10
 user=root
-priority=25
-depends_on=php-fpm,nginx
-environment=PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+startsecs=10
+startretries=999
