--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -6,28 +6,24 @@ pidfile=/var/run/supervisord.pid
 childlogdir=/var/log/supervisor
 
 [program:apache2]
-command=/bin/bash -c "sleep 2 && /usr/local/bin/apache2-foreground"
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
+command=/entrypoint.sh apache2-foreground
+stdout_logfile=/dev/stdout!always
+stderr_logfile=/dev/stderr!always
 autorestart=true
-startretries=3
-user=root
-priority=200
+startsecs=5
+priority=100
 
 [program:cron]
-command=/usr/sbin/cron -f
-stdout_logfile=/var/log/cron.log
-stderr_logfile=/var/log/cron.log
+command=cron -f
+stdout_logfile=/var/log/cron.log!always
+stderr_logfile=/var/log/cron.log!always
 autorestart=true
-user=root
+priority=200
 
 [program:nextcloud-cron]
-command=/bin/bash -c 'sleep 60 && while true; do su www-data -s /bin/bash -c "php /var/www/html/cron.php"; sleep 300; done'
-stdout_logfile=/var/log/nextcloud-cron.log
-stderr_logfile=/var/log/nextcloud-cron.log
+command=su www-data -s /bin/bash -c 'while true; do php /var/www/html/cron.php >/dev/null 2>&1; sleep 300; done'
+stdout_logfile=/var/log/nextcloud-cron.log!always
+stderr_logfile=/var/log/nextcloud-cron.log!always
 autorestart=true
-user=root
-startsecs=10
-startretries=999
+startsecs=5
+priority=300
