--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -6,14 +6,13 @@ pidfile=/var/run/supervisord.pid
 childlogdir=/var/log/supervisor
 
 [program:apache2]
-command=/bin/bash -c "sleep 2 && /usr/local/bin/apache2-foreground"
+command=/usr/local/bin/apache2-foreground
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autorestart=true
 startretries=3
-user=root
 priority=200
 
 [program:cron]
@@ -21,13 +20,11 @@ command=/usr/sbin/cron -f
 stdout_logfile=/var/log/cron.log
 stderr_logfile=/var/log/cron.log
 autorestart=true
-user=root
 
 [program:nextcloud-cron]
 command=/bin/bash -c 'sleep 60 && while true; do su www-data -s /bin/bash -c "php /var/www/html/cron.php"; sleep 300; done'
 stdout_logfile=/var/log/nextcloud-cron.log
 stderr_logfile=/var/log/nextcloud-cron.log
 autorestart=true
-user=root
 startsecs=10
 startretries=999
