--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -5,6 +5,17 @@ logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
 childlogdir=/var/log/supervisor
 
+[program:php-fpm8.3]
+command=php-fpm8.3 -F
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+autorestart=true
+startretries=3
+user=www-data
+priority=100
+
 [program:apache2]
 command=/bin/bash -c "sleep 2 && /usr/local/bin/apache2-foreground"
 stdout_logfile=/dev/stdout
