yoo with admin and password vars

--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -29,15 +29,19 @@ priority=200
 
 [program:cron]
 command=/usr/sbin/cron -f
-stdout_logfile=/var/log/cron.log
-stderr_logfile=/var/log/cron.log
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 autorestart=true
 user=root
 
 [program:nextcloud-cron]
 command=/bin/bash -c 'sleep 60 && while true; do su www-data -s /bin/bash -c "php /var/www/html/cron.php"; sleep 300; done'
-stdout_logfile=/var/log/nextcloud-cron.log
-stderr_logfile=/var/log/nextcloud-cron.log
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 autorestart=true
 user=root
 startsecs=10
