--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -6,7 +6,7 @@ pidfile=/var/run/supervisord.pid
 childlogdir=/var/log/supervisor
 
 [program:php-fpm8.3]
-command=php-fpm8.3 -F
+command=php8.3-fpm -F
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
