--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -2,11 +2,10 @@
 nodaemon=true
 user=root
 logfile=/var/log/supervisor/supervisord.log
-pidfile=/var/run/supervisord.pid
 childlogdir=/var/log/supervisor
 
-[program:php-fpm8.3]
-command=php8.3-fpm -F
+[program:php-fpm]
+command=php-fpm8.3 -F
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
@@ -14,10 +13,10 @@ stderr_logfile_maxbytes=0
 autorestart=true
 startretries=3
 user=www-data
-priority=100
+priority=50
 
 [program:apache2]
-command=/bin/bash -c "sleep 2 && /usr/local/bin/apache2-foreground"
+command=apache2-foreground
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
@@ -25,7 +24,7 @@ stderr_logfile_maxbytes=0
 autorestart=true
 startretries=3
 user=root
-priority=200
+priority=100
 
 [program:cron]
 command=/usr/sbin/cron -f
@@ -37,7 +36,7 @@ autorestart=true
 user=root
 
 [program:nextcloud-cron]
-command=/bin/bash -c 'sleep 60 && while true; do su www-data -s /bin/bash -c "php /var/www/html/cron.php"; sleep 300; done'
+command=/bin/bash -c 'sleep 60 && while true; do runuser -u www-data -- php /var/www/html/cron.php; sleep 300; done'
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
