--- a/config/php-fpm.conf
+++ b/config/php-fpm.conf
@@ -20,7 +20,8 @@ pm.process_idle_timeout = 10s
 pm.max_requests = 500
 
 ; Logging
-access.log = /var/log/php8.3-fpm.access.log
+access.log = /proc/self/fd/2
+error_log = /proc/self/fd/2
 access.format = "%R - %u %t \"%m %r%Q%q\" %s %f %{mili}d %{kilo}M %C%%"
 
 ; Security
