--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -16,7 +16,7 @@ user=www-data
 priority=50
 
 [program:apache2]
-command=apache2-foreground
+command=apache2ctl -D FOREGROUND
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
@@ -36,7 +36,7 @@ autorestart=true
 user=root
 
 [program:nextcloud-cron]
-command=/bin/bash -c 'sleep 60 && while true; do runuser -u www-data -c "php /var/www/html/cron.php"; sleep 300; done'
+command=/bin/bash -c 'sleep 60 && while true; do runuser www-data -c "php /var/www/html/cron.php"; sleep 300; done'
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
