--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -17,6 +17,8 @@ priority=50
 
 [program:apache2]
 command=apache2ctl -D FOREGROUND
+stopasgroup=true
+killasgroup=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
