--- a/config/php-fpm.conf
+++ b/config/php-fpm.conf
@@ -1,16 +1,14 @@
-[www]
+[global]
+daemonize = no
+error_log = /proc/self/fd/2
 
-; PHP-FPM pool configuration optimized for Railway/Nextcloud
+[www]
 user = www-data
 group = www-data
-
-; Listen on a socket for better performance
 listen = /run/php/php8.3-fpm.sock
 listen.owner = www-data
 listen.group = www-data
 listen.mode = 0660
-
-; Process management
 pm = dynamic
 pm.max_children = 5
 pm.start_servers = 2
@@ -18,16 +16,9 @@ pm.min_spare_servers = 1
 pm.max_spare_servers = 3
 pm.process_idle_timeout = 10s
 pm.max_requests = 500
-
-; Logging
 access.log = /proc/self/fd/2
-error_log = /proc/self/fd/2
-access.format = "%R - %u %t \"%m %r%Q%q\" %s %f %{mili}d %{kilo}M %C%%"
-
-; Security
-security.limit_extensions = .php .php3 .php4 .php5 .php7
-
-; Performance tuning for Railway
+catch_workers_output = yes
+security.limit_extensions = .php
 php_admin_value[memory_limit] = 512M
 php_admin_value[upload_max_filesize] = 2G
 php_admin_value[post_max_size] = 2G
