--- a/config/php-fpm.conf
+++ b/config/php-fpm.conf
@@ -1,26 +1,20 @@
 [global]
 daemonize = no
-error_log = /proc/self/fd/2
+pid = /run/php/php-fpm.pid
 
 [www]
 user = www-data
 group = www-data
 listen = /run/php/php8.3-fpm.sock
-listen.owner = www-data
-listen.group = www-data
 listen.mode = 0660
 pm = dynamic
 pm.max_children = 5
 pm.start_servers = 2
 pm.min_spare_servers = 1
 pm.max_spare_servers = 3
-pm.process_idle_timeout = 10s
 pm.max_requests = 500
-access.log = /proc/self/fd/2
 catch_workers_output = yes
-security.limit_extensions = .php
 php_admin_value[memory_limit] = 512M
-php_admin_value[upload_max_filesize] = 2G
 php_admin_value[post_max_size] = 2G
+php_admin_value[upload_max_filesize] = 2G
 php_admin_value[max_execution_time] = 3600
-php_admin_value[max_input_time] = 3600
