--- a/config/php-fpm.conf
+++ b/config/php-fpm.conf
@@ -1,20 +1,14 @@
 [global]
 daemonize = no
 pid = /run/php/php-fpm.pid
+log_level = alert
 
 [www]
 user = www-data
 group = www-data
 listen = /run/php/php8.3-fpm.sock
 listen.mode = 0660
-pm = dynamic
-pm.max_children = 5
-pm.start_servers = 2
-pm.min_spare_servers = 1
-pm.max_spare_servers = 3
-pm.max_requests = 500
+pm = static
+pm.max_children = 4
 catch_workers_output = yes
 php_admin_value[memory_limit] = 512M
-php_admin_value[post_max_size] = 2G
-php_admin_value[upload_max_filesize] = 2G
-php_admin_value[max_execution_time] = 3600
